--- a/less/grid.less
+++ b/less/grid.less
@@ -35,122 +35,101 @@ div[class*=' col-'] {
     border: 1px solid #ddd;
     border: 1px solid rgba(86,61,124,.2);
 }
+// get the fractions stuff
+.get-smallest-fractions (@grid-columns);
 
-.get-gcds (@grid-columns);
-
-.column-maker (@gcd-len, @grid-columns, @gcd-arr, xs);
+// start the loop
+.the-loop (xs, @fractions-arr, @grid-columns, @fractions-arr-len);
 
 
 @media (min-width: @screen-sm-min) {
     .container {
         width: @container-sm;
     }
-    .column-maker (@gcd-len, @grid-columns, @gcd-arr, sm);
+    .the-loop (sm, @fractions-arr, @grid-columns, @fractions-arr-len);
 }
 
 @media (min-width: @screen-md-min) {
     .container {
         width: @container-md;
     }
-    .column-maker (@gcd-len, @grid-columns, @gcd-arr, md);
+    .the-loop (md, @fractions-arr, @grid-columns, @fractions-arr-len);
 }
 
 @media (min-width: @screen-lg-min) {
     .container {
         width: @container-lg;
     }
-    .column-maker (@gcd-len, @grid-columns, @gcd-arr, lg);
+    .the-loop (lg, @fractions-arr, @grid-columns, @fractions-arr-len);
 }
 
-.get-gcds (@cols) {
-    @gcd-arr: ~`(function(c){var f=[];for(var d=c;d>0;d--){for(var n=d;n>0;n--){function r(n,d){var g=function g(a,b){return b?g(b,a%b):a;};g=g(n,d);return (n/g)+"-"+(d/g);}var g=r(n,d);if(-1===f.indexOf(g))f.push(g);}}return f.join(",");})("@{cols}")`;
-    @gcd-len: ~`(function(c){ return c.split(",").length})("@{gcd-arr}")`;
+.get-smallest-fractions (@total-columns) {
+    @fractions-arr:     ~`(function(c){var f=[];for(var d=c;d>0;d--){for(var n=d;n>0;n--){function r(n,d){var g=function g(a,b){return b?g(b,a%b):a;};g=g(n,d);return (n/g)+"-"+(d/g);}var g=r(n,d);if(-1===f.indexOf(g))f.push(g);}}return f.join(",");})("@{total-columns}")`;
+    @fractions-arr-len: ~`(function(c){ return c.split(",").length})("@{fractions-arr}")`;
 }
 
-.column-maker (@totalgcds, @totalcols, @gcdsarray, @size) {
+// the loop
+.the-loop (@size, @fraction-array, @total-columns, @k) when (@k > 0) {
 
-    // looper function
-    .gcd-loop (@k) when (@k > 0) {
+    // get the current fraction
+    @current-fraction:    ~`(function(f,k){return f.split(",")[k-1]})("@{fraction-array}","@{k}")`;
+    @current-numerator:   `(function(x){var n=x.split("-");return Number(n[0]);})("@{current-fraction}")`;
+    @current-denominator: `(function(x){var d=x.split("-");return Number(d[1]);})("@{current-fraction}")`;
+    @temp-span-2:         ~'';
+    @temp-push-2:         ~'';
+    @temp-pull-2:         ~'';
+    @temp-offset-2:       ~'';
 
-        // get current gcd
-        @currgcd: ~`(function(g,i){return g.split(",")[i-1]})("@{gcdsarray}","@{k}")`;
-        @temp-span-2: ~'';
-        @temp-push-2: ~'';
-        @temp-pull-2: ~'';
-        @temp-offset-2: ~'';
+    // all numerator/denominator loops but the last
+    .numerator-denominator-loop (@size, @i, @j, @total-columns, @temp-span-2, @temp-push-2, @temp-pull-2, @temp-offset-2) when (@i <= @total-columns) and (@j <= @total-columns) {
 
-        // looper function
-        .denomenator-loop (@j, @temp-span-2, @temp-push-2, @temp-pull-2, @temp-offset-2) when (@j > 0) {
-
-            // looper function
-            .numerator-loop (@i, @temp-span-2, @temp-push-2, @temp-pull-2, @temp-offset-2) when (@i > 0) {
-
-                // get testing gcd
-                @testgcd: ~`(function(n,d){var g=function g(a,b){return b?g(b,a%b):a;};g=g(n,d);return (n/g)+"-"+(d/g);})("@{i}","@{j}")`;
-                
-                // if @gcd === gcd(numerator/denominator)
-                // add it to the selectors
-
-                // when it's the first find
-                .compare(@curr, @test, @temp-span-1, @temp-push-1, @temp-pull-1, @temp-offset-1, @size) when (@test = @curr) and (@temp-span-1 = ~'') {
-                    @temp-span-2:   ".col-@{size}-@{i}-@{j}";
-                    @temp-push-2:   ".col-@{size}-push-@{i}-@{j}";
-                    @temp-pull-2:   ".col-@{size}-pull-@{i}-@{j}";
-                    @temp-offset-2: ".col-@{size}-offset-@{i}-@{j}";
-                }
-
-                // when it's not the first find and type is empty
-                .compare(@curr, @test, @temp-span-1, @temp-push-1, @temp-pull-1, @temp-offset-1, @size) when (@test = @curr) and not (@temp-span-1 = ~'') {
-                    @temp-span-2:   "@{temp-span-1}, .col-@{size}-@{i}-@{j}";
-                    @temp-push-2:   "@{temp-push-1}, .col-@{size}-push-@{i}-@{j}";
-                    @temp-pull-2:   "@{temp-pull-1}, .col-@{size}-pull-@{i}-@{j}";
-                    @temp-offset-2: "@{temp-offset-1}, .col-@{size}-offset-@{i}-@{j}";
-                }
-
-                .compare(@currgcd, @testgcd, @temp-span-2, @temp-push-2, @temp-pull-2, @temp-offset-2, @size);
-
-                // print when i and j are 1
-                .printitout (@t-span, @t-push, @t-pull, @t-offset, @a, @b) when (@a = 1) and (@b = 1) {
-                    @s-span:   ~"@{t-span}";
-                    @s-push:   ~"@{t-push}";
-                    @s-pull:   ~"@{t-pull}";
-                    @s-offset: ~"@{t-offset}";
-                    @percent:  `(function(x){var y=x.split("-");return y[0]/y[1];})("@{currgcd}")`;
-                    @{s-span} {
-                        width: percentage(@percent);
-                    }
-                    @{s-push} {
-                        left: percentage(@percent);
-                    }
-                    @{s-pull} {
-                        right: percentage(@percent);
-                    }
-                    @{s-offset} {
-                        left-margin: percentage(@percent);
-                    }
-                }
-
-                .printitout (@temp-span-2, @temp-push-2, @temp-pull-2, @temp-offset-2, @i, @j);
-
-                // next iteration
-                .numerator-loop (@i - 1, @temp-span-2, @temp-push-2, @temp-pull-2, @temp-offset-2);
-            }
-
-            // start the numerator loop
-            .numerator-loop (@j, @temp-span-2, @temp-push-2, @temp-pull-2, @temp-offset-2);
-
-            // next iteration
-            .denomenator-loop (@j - 1, @temp-span-2, @temp-push-2, @temp-pull-2, @temp-offset-2);
-
+        // when it's the first iteration
+        .write-to-selector (@size, @i, @j, @temp-span-1, @temp-push-1, @temp-pull-1, @temp-offset-1) when (@temp-span-1 = ~'') {
+            @temp-span-2:   ".col-@{size}-@{i}-@{j}";
+            @temp-push-2:   ".col-@{size}-push-@{i}-@{j}";
+            @temp-pull-2:   ".col-@{size}-pull-@{i}-@{j}";
+            @temp-offset-2: ".col-@{size}-offset-@{i}-@{j}";
         }
 
-        // start the denomenator loop with highest column count
-        .denomenator-loop (@totalcols, @temp-span-2, @temp-push-2, @temp-pull-2, @temp-offset-2);
+        // when it's not the first find and type is empty
+        .write-to-selector (@size, @i, @j, @temp-span-1, @temp-push-1, @temp-pull-1, @temp-offset-1) when not (@temp-span-1 = ~'') {
+            @temp-span-2:   "@{temp-span-1}, .col-@{size}-@{i}-@{j}";
+            @temp-push-2:   "@{temp-push-1}, .col-@{size}-push-@{i}-@{j}";
+            @temp-pull-2:   "@{temp-pull-1}, .col-@{size}-pull-@{i}-@{j}";
+            @temp-offset-2: "@{temp-offset-1}, .col-@{size}-offset-@{i}-@{j}";
+        }
 
-        // next iteration
-        .gcd-loop (@k - 1);
+        .write-to-selector (@size, @i, @j, @temp-span-2, @temp-push-2, @temp-pull-2, @temp-offset-2);
+
+        .numerator-denominator-loop (@size, @i + @current-numerator, @j + @current-denominator, @total-columns, @temp-span-2, @temp-push-2, @temp-pull-2, @temp-offset-2);
+
     }
 
-    // start the gcd loop
-    .gcd-loop (@totalgcds);
+    // last loop
+    .numerator-denominator-loop (@size, @i, @j, @total-columns, @temp-span-2, @temp-push-2, @temp-pull-2, @temp-offset-2) when (@i > @total-columns), (@j > @total-columns) {
+        @s-span:   ~"@{temp-span-2}";
+        @s-push:   ~"@{temp-push-2}";
+        @s-pull:   ~"@{temp-pull-2}";
+        @s-offset: ~"@{temp-offset-2}";
+        @percent:  `(function(x){var y=x.split("-");return y[0]/y[1];})("@{current-fraction}")`;
+        @{s-span} {
+            width: percentage(@percent);
+        }
+        @{s-push} {
+            left: percentage(@percent);
+        }
+        @{s-pull} {
+            right: percentage(@percent);
+        }
+        @{s-offset} {
+            left-margin: percentage(@percent);
+        }    
+    }
+
+    // first numerator/denominator loop
+    .numerator-denominator-loop (@size, @current-numerator, @current-denominator, @total-columns, @temp-span-2, @temp-push-2, @temp-pull-2, @temp-offset-2);
+
+    // iterate the main loop
+    .the-loop (@size, @fraction-array, @total-columns, @k - 1);
+
 }
